vertical scrollbar now always present to avoid jumping arrow.  horizontal scrollbar should now be hidden in IE

--- a/static/sass/screen.sass
+++ b/static/sass/screen.sass
@@ -1,5 +1,6 @@
 body
-        overflow-x: hidden
+        overflow-x: visible
+        overflow-y: scroll
         z-index: 0
         font-size: 20px
         font-family: 'Old Standard TT', sans-serif
